--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^4.3.2+3
   qr_code_scanner: ^0.3.0
   flutter_spinkit: "^4.1.2"
+  firebase_messaging: ^7.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
