--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   qr_code_scanner: ^0.3.0
   flutter_spinkit: "^4.1.2"
   firebase_messaging: ^7.0.3
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
