--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   firebase_messaging: ^7.0.3
   http: ^0.12.2
+  rxdart: ^0.25.0
 
 
   # The following adds the Cupertino Icons font to your application.
