--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^0.12.2
   rxdart: ^0.25.0
   intl: ^0.16.1
+  gradient_app_bar: ^0.1.3
+  flutter_gradients: ^1.0.0+3
 
 
   # The following adds the Cupertino Icons font to your application.
