--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   rxdart: ^0.25.0
   intl: ^0.16.1
   gradient_app_bar: ^0.1.3
-  flutter_gradients: ^1.0.0+3
+  # flutter_gradients: ^1.0.0+3
+  fluttertoast: ^8.0.3
+  new_gradient_app_bar: ^0.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
